--- a/code/vite-project/src/index.css
+++ b/code/vite-project/src/index.css
@@ -98,7 +98,7 @@ body {
   font-size: 1.5rem;
 }
 
-.wer-container div {
+.wer-container > div {
   display: flex;
   justify-content: space-between;
 }
@@ -132,4 +132,46 @@ body {
   margin-top: 1rem;
   text-align: center;
   font-size: 1.25rem;
+}
+.results-values {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.given-words {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border: 1px solid #e3e3e3;
+    margin-bottom: 10px;
+    padding: 5px;
+    height: 50px;
+}
+
+.given-words div {
+    height: inherit;
+    display: flex;
+    align-items: center;
+    /* outline: 1px solid red; */
+}
+.given-words div:nth-child(1){
+    flex-basis: 25%;
+}
+.given-words div{
+    position: relative;
+}
+
+.given-words div .icon {
+    position: absolute;
+    top: 0;
+    right: 10px;
+}
+.given-words div .icon.red {
+    background-color: #ce2020;
+    color: fff;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    font-size: 10px;
 }
