--- a/code/vite-project/src/index.css
+++ b/code/vite-project/src/index.css
@@ -150,21 +150,26 @@ body {
   margin: 8px 0;
 }
 
-/* Status Colors */
-.red { color: #d93025;
-     background: #fce8e6;
-     padding: 2px 6px;
+.badge-box {
+    padding: 2px 6px;
      border-radius: 4px;
+}
+
+.red { 
+    color: #d93025;
+     background: #fce8e6;     
  }
-.orange { color: #e27200;
+.orange { 
+     color: #e27200;
      background: #fff4e5;
-     padding: 2px 6px;
-     border-radius: 4px;
  }
 .add { color: #188038;
      background: #e6f4ea;
-     padding: 2px 6px;
-     border-radius: 4px; }
+}
+
+.match { color: #1383c9;
+     background: #e6f4ea;
+}
 
 .badge {
   font-size: 0.65rem;
